--- a/module 2.ipynb
+++ b/module 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 182,
    "id": "a03d9d84",
    "metadata": {},
    "outputs": [],
@@ -12,40 +12,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 183,
    "id": "beb8b451",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a216c0d3",
+   "execution_count": 184,
+   "id": "4277d370",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "graph = nx.Graph() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 185,
    "id": "e140b0ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>sentence_range</th>\n",
+       "      <th>text</th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>social_timestamp</th>\n",
+       "      <th>social_karma</th>\n",
+       "      <th>syntax_ari</th>\n",
+       "      <th>...</th>\n",
+       "      <th>lex_dal_min_pleasantness</th>\n",
+       "      <th>lex_dal_min_activation</th>\n",
+       "      <th>lex_dal_min_imagery</th>\n",
+       "      <th>lex_dal_avg_activation</th>\n",
+       "      <th>lex_dal_avg_imagery</th>\n",
+       "      <th>lex_dal_avg_pleasantness</th>\n",
+       "      <th>social_upvote_ratio</th>\n",
+       "      <th>social_num_comments</th>\n",
+       "      <th>syntax_fk_grade</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ptsd</td>\n",
+       "      <td>8601tu</td>\n",
+       "      <td>(15, 20)</td>\n",
+       "      <td>He said he had not felt that way before, sugge...</td>\n",
+       "      <td>33181</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1521614353</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.806818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.1250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.77000</td>\n",
+       "      <td>1.52211</td>\n",
+       "      <td>1.89556</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.253573</td>\n",
+       "      <td>-0.002742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>assistance</td>\n",
+       "      <td>8lbrx9</td>\n",
+       "      <td>(0, 5)</td>\n",
+       "      <td>Hey there r/assistance, Not sure if this is th...</td>\n",
+       "      <td>2606</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1527009817</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9.429737</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.69586</td>\n",
+       "      <td>1.62045</td>\n",
+       "      <td>1.88919</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.828316</td>\n",
+       "      <td>0.292857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ptsd</td>\n",
+       "      <td>9ch1zh</td>\n",
+       "      <td>(15, 20)</td>\n",
+       "      <td>My mom then hit me with the newspaper and it s...</td>\n",
+       "      <td>38816</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1535935605</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.769821</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.1429</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.83088</td>\n",
+       "      <td>1.58108</td>\n",
+       "      <td>1.85828</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.841667</td>\n",
+       "      <td>0.011894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>relationships</td>\n",
+       "      <td>7rorpp</td>\n",
+       "      <td>[5, 10]</td>\n",
+       "      <td>until i met my new boyfriend, he is amazing, h...</td>\n",
+       "      <td>239</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1516429555</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.667798</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.1250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.75356</td>\n",
+       "      <td>1.52114</td>\n",
+       "      <td>1.98848</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.104027</td>\n",
+       "      <td>0.141671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>survivorsofabuse</td>\n",
+       "      <td>9p2gbc</td>\n",
+       "      <td>[0, 5]</td>\n",
+       "      <td>October is Domestic Violence Awareness Month a...</td>\n",
+       "      <td>1421</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1539809005</td>\n",
+       "      <td>24</td>\n",
+       "      <td>7.554238</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.1250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.77644</td>\n",
+       "      <td>1.64872</td>\n",
+       "      <td>1.81456</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.910952</td>\n",
+       "      <td>-0.204167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 116 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          subreddit post_id sentence_range   \n",
+       "0              ptsd  8601tu       (15, 20)  \\\n",
+       "1        assistance  8lbrx9         (0, 5)   \n",
+       "2              ptsd  9ch1zh       (15, 20)   \n",
+       "3     relationships  7rorpp        [5, 10]   \n",
+       "4  survivorsofabuse  9p2gbc         [0, 5]   \n",
+       "\n",
+       "                                                text     id  label   \n",
+       "0  He said he had not felt that way before, sugge...  33181      1  \\\n",
+       "1  Hey there r/assistance, Not sure if this is th...   2606      0   \n",
+       "2  My mom then hit me with the newspaper and it s...  38816      1   \n",
+       "3  until i met my new boyfriend, he is amazing, h...    239      1   \n",
+       "4  October is Domestic Violence Awareness Month a...   1421      1   \n",
+       "\n",
+       "   confidence  social_timestamp  social_karma  syntax_ari  ...   \n",
+       "0         0.8        1521614353             5    1.806818  ...  \\\n",
+       "1         1.0        1527009817             4    9.429737  ...   \n",
+       "2         0.8        1535935605             2    7.769821  ...   \n",
+       "3         0.6        1516429555             0    2.667798  ...   \n",
+       "4         0.8        1539809005            24    7.554238  ...   \n",
+       "\n",
+       "   lex_dal_min_pleasantness  lex_dal_min_activation  lex_dal_min_imagery   \n",
+       "0                     1.000                  1.1250                  1.0  \\\n",
+       "1                     1.125                  1.0000                  1.0   \n",
+       "2                     1.000                  1.1429                  1.0   \n",
+       "3                     1.000                  1.1250                  1.0   \n",
+       "4                     1.000                  1.1250                  1.0   \n",
+       "\n",
+       "   lex_dal_avg_activation  lex_dal_avg_imagery  lex_dal_avg_pleasantness   \n",
+       "0                 1.77000              1.52211                   1.89556  \\\n",
+       "1                 1.69586              1.62045                   1.88919   \n",
+       "2                 1.83088              1.58108                   1.85828   \n",
+       "3                 1.75356              1.52114                   1.98848   \n",
+       "4                 1.77644              1.64872                   1.81456   \n",
+       "\n",
+       "   social_upvote_ratio  social_num_comments  syntax_fk_grade  sentiment  \n",
+       "0                 0.86                    1         3.253573  -0.002742  \n",
+       "1                 0.65                    2         8.828316   0.292857  \n",
+       "2                 0.67                    0         7.841667   0.011894  \n",
+       "3                 0.50                    5         4.104027   0.141671  \n",
+       "4                 1.00                    1         7.910952  -0.204167  \n",
+       "\n",
+       "[5 rows x 116 columns]"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "df = pd.read_csv(\"dreaddit-train.csv\")     \n",
-    "            \n",
-    "for _, row in df.iterrows():\n",
-    "    graph.add_edge(row['subreddit'], row['post_id'])\n",
+    "df.head()\n",
     "    \n",
     " \n",
     "        "
@@ -53,8 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1caef8ee",
+   "execution_count": 186,
+   "id": "11192d90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df.iterrows():\n",
+    "    graph.add_edge(row['subreddit'], row['post_id'])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "9959a658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "01512784",
+   "execution_count": 188,
+   "id": "76ad6f8c",
    "metadata": {},
    "outputs": [
     {
@@ -81,15 +317,342 @@
    "source": [
     "subreddit_counts = df['subreddit'].value_counts()\n",
     "\n",
-    "# Plot the bar graph\n",
     "plt.figure(figsize=(10, 6))\n",
     "subreddit_counts.plot(kind='bar', color='blue')\n",
     "plt.title('Number of Occurrences')\n",
     "plt.xlabel('Subreddit')\n",
     "plt.ylabel('Count')\n",
     "\n",
-    "# Show the graph\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccf302aa",
+   "metadata": {},
+   "source": [
+    "Expanding on Module 2 by utilizing Logistic Regression to determine the accuracy, recall, precision and F1 score of the features as \"text\" and the label as \"label\" in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "f4b7d286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['text']\n",
+    "y = df['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "2daa3c13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "a3ac99e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "940     I didn't tell anyone, not even my family. I fe...\n",
+       "741      I just stop doing productive things, talking ...\n",
+       "2799    I am just sick of this being my daily life. Be...\n",
+       "2529    (Edit: sorry if this is very word-salad-esk an...\n",
+       "787     I stopped, looked down, looked at her. I took ...\n",
+       "                              ...                        \n",
+       "1638    Lately I realized that if its possible to have...\n",
+       "1095    It's something that I continually come back to...\n",
+       "1130    How do I know if I need help? Please I need he...\n",
+       "1294    Next, I'll get nice and comfy and ready to sle...\n",
+       "860     I told him I’m not using that on my makeup and...\n",
+       "Name: text, Length: 2270, dtype: object"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "7565c85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "415     For anxiety/depression. Feb 16 weekend, we hun...\n",
+       "2691    His response was to constantly remind me that ...\n",
+       "1322    He would call me by the name peepee until I wa...\n",
+       "2272    Back ground, me and my girl have been homeless...\n",
+       "1967    Sally is around the same age, 25 I assume, (ca...\n",
+       "                              ...                        \n",
+       "163     I hate the thought that even after my mom's de...\n",
+       "1886    I was the designated driver for my parents and...\n",
+       "252     As the years went by the town labelled them as...\n",
+       "1777    A nasty one. Once it cleared up in a while I d...\n",
+       "2543    I started my seizure while on the stairs and a...\n",
+       "Name: text, Length: 568, dtype: object"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "bbf250b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "940     1\n",
+       "741     1\n",
+       "2799    1\n",
+       "2529    0\n",
+       "787     0\n",
+       "       ..\n",
+       "1638    0\n",
+       "1095    0\n",
+       "1130    1\n",
+       "1294    0\n",
+       "860     1\n",
+       "Name: label, Length: 2270, dtype: int64"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "2fdeb790",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "415     0\n",
+       "2691    0\n",
+       "1322    1\n",
+       "2272    1\n",
+       "1967    0\n",
+       "       ..\n",
+       "163     1\n",
+       "1886    1\n",
+       "252     0\n",
+       "1777    0\n",
+       "2543    0\n",
+       "Name: label, Length: 568, dtype: int64"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "46a818a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(max_features=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "d245c9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "58117e54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LogisticRegression()\n",
+    "model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "9d9294c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7253521126760564"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "5f3ba0b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7442622950819672"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision = precision_score(y_test, y_pred)\n",
+    "precision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "eea2e9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7442622950819672"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall = recall_score(y_test, y_pred)\n",
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "b0b6d59e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7442622950819672"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1 = f1_score(y_test, y_pred)\n",
+    "f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "83ab4134",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "7f3e3178",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Positives: 78\n",
+      "False Negatives: 78\n",
+      "True Positives: 227\n",
+      "True Negatives: 185\n"
+     ]
+    }
+   ],
+   "source": [
+    "false_positives = []\n",
+    "false_negatives = []\n",
+    "true_positives = []\n",
+    "true_negatives = []\n",
+    "\n",
+    "\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] == 1 and y_test[i] == 0:  \n",
+    "        false_positives.append(i)\n",
+    "    if y_pred[i] == 1 and y_test[i] == 1:  \n",
+    "        true_positives.append(i)\n",
+    "    if y_pred[i] == 0 and y_test[i] == 0:  \n",
+    "        true_negatives.append(i)\n",
+    "    elif y_pred[i] == 0 and y_test[i] == 1:  \n",
+    "        false_negatives.append(i)\n",
+    "\n",
+    "print(\"False Positives:\", len(false_positives))\n",
+    "print(\"False Negatives:\", len(false_negatives))\n",
+    "print(\"True Positives:\", len(true_positives))\n",
+    "print(\"True Negatives:\", len(true_negatives))"
    ]
   }
  ],
